2009-10-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Updated the README file for all recent changes and
	  additions in the XML data format of the Foomatic database.

	* lib/Foomatic/DB.pm: Set "*ColorDevice:" in the Foomatic PPD
	  files not only based on whether the printer is a color printer
	  but also on whether the driver is capable of generating color
	  output (if appropriate information about the driver is
	  available).

2009-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added support for internationalization by
	  querying the translation tables of the MySQL database.

2009-09-24  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Let an SQL-based driver query also show the
	  list of supported printers and a printer query also the list of
	  suitable drivers, as the XML-based queries do.

2009-09-23  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added methods make_exists_in_sql_db(),
	  printer_exists_in_sql_db(), driver_exists_in_sql_db(),
	  make_exists(), and driver_exists().

	  Added support for additional MySQL database fields in the driver
	  entries: group, locale, licenselink. Added also support for the
	  additional MySQL table for dependencies between drivers.

2009-09-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: When generating a PPD file, do only generate
	  the overview if really needed. This makes generating PPDs 10 times
	  faster whenusing a MySQL database.

	* lib/Foomatic/DB.pm: Completed get_combo_data_from_sql_db()
	  method. Now PPDs can be generated based on an SQL database.
	  Added new methods get_makes_from_sql_db(),
	  get_models_by_make_from_sql_db(),
	  get_printer_from_make_model_from_sql_db().

2009-09-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Removed line 

	  *cupsFilter:   "application/vnd.apple-pdf 25 foomatic-rip"

	  from the Foomatic-generated PPD files, it causes problems with